# sciml-sparse-ffi

./: CMakeLists.txt  Project.toml  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: run_benchmarks.jl
c_include/: sciml_sparse_ffi.h
c_src/: spmv.c
src/: CustomSparseMatrix.jl  SciMLSparseFFI.jl  mul_overloads.jl  raw_bindings.jl
test/: runtests.jl
